--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+REACT_APP_AUTH0_DOMAIN=dev-do2s6axuwuap2dzd.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=SR1HTNtzHj4lYBYegKVNeepFkzG7ggiM
+REACT_APP_API_ENDPOINT=https://72qj37puxe.execute-api.us-east-1.amazonaws.com/dev
