--- a/starter/backend/package.json
+++ b/starter/backend/package.json
@@ -21,7 +21,8 @@
     "aws-xray-sdk-core": "^3.10.3",
     "axios": "^1.8.4",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.7",
     "serverless": "^3.36.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "uuid": "^9.0.1",
