--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -19,12 +19,15 @@ provider:
 
   environment:
     S3_BUCKET: todo-images-${self:provider.stage}
-    TODOS_TABLE: Todos-${self:provider.stage}
+    TODOS_TABLE: Todos-new-${self:provider.stage}
     TODOS_CREATED_AT_INDEX: TodosCreatedAtIndex 
     TODOS_DONE_INDEX: TodosDoneIndex
+    TODOS_USER_ID_INDEX: TodosUserIdIndex
     TODOS_APP_AUTH0_DOMAIN: dev-do2s6axuwuap2dzd.us.auth0.com
     TODOS_APP_AUTH0_AUDIENCE: https://dev-do2s6axuwuap2dzd.us.auth0.com/api/v2/
   
+
+
 
 functions:
 
@@ -36,9 +39,23 @@ functions:
     handler: src/lambda/http/getTodos.handler
     events:
       - http:
+        method: options
+        path: todos
+        cors:
+          origin: 'http://localhost:3000'
+          allowCredentials: true
+      - http:
           method: get
           authorizer: Auth
-          cors: true
+          cors: 
+            origin: 'http://localhost:3000'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+            allowCredentials: true
           path: todos
     iamRoleStatements:
       - Effect: Allow
@@ -46,6 +63,7 @@ functions:
           - dynamodb:Query
         Resource:
           - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+          - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.TODOS_USER_ID_INDEX}
       - Effect: Allow
         Action:
           - "xray:PutTraceSegments"
@@ -98,6 +116,18 @@ resources:
         RestApiId:
           Ref: ApiGatewayRestApi
 
+    GatewayResponseDefault5XX:
+      Type: AWS::ApiGateway::GatewayResponse
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST,PATCH,PUT'"
+        ResponseType: DEFAULT_5XX
+        RestApiId:
+          Ref: ApiGatewayRestApi
+
+
     TodosDynamoDBTable:
       Type: AWS::DynamoDB::Table
       Properties:
@@ -107,31 +137,17 @@ resources:
             AttributeType: S
           - AttributeName: userId
             AttributeType: S
-          - AttributeName: createdAt
-            AttributeType: N
-          - AttributeName: done
-            AttributeType: N
         KeySchema:
           - AttributeName: todoId
             KeyType: HASH
           - AttributeName: userId
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
-        LocalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.TODOS_CREATED_AT_INDEX}
+        GlobalSecondaryIndexes:
+          - IndexName: ${self:provider.environment.TODOS_USER_ID_INDEX}
             KeySchema:
-              - AttributeName: todoId
+              - AttributeName: userId
                 KeyType: HASH
-              - AttributeName: createdAt
-                KeyType: RANGE
-            Projection:
-              ProjectionType: ALL
-          - IndexName: ${self:provider.environment.TODOS_DONE_INDEX}
-            KeySchema:
-              - AttributeName: todoId
-                KeyType: HASH
-              - AttributeName: done
-                KeyType: RANGE
             Projection:
               ProjectionType: ALL
               
