Updated schema files to include minLength validations. Updated serverless.yml to use "schemas" instead of "schema" so gateway validations would deploy properly. Fixed the return object for createTodo to pass back necessary data.

--- a/starter/backend/package.json
+++ b/starter/backend/package.json
@@ -27,5 +27,8 @@
     "serverless-iam-roles-per-function": "^3.2.0",
     "uuid": "^9.0.1",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "serverless-apigateway-service-proxy": "^2.2.2"
   }
 }
